fix(cxl-lumo-styles): simplify vaadin-overlay theme for cxl-marketing-nav on mobile

--- a/packages/cxl-lumo-styles/scss/themes/vaadin-overlay.scss
+++ b/packages/cxl-lumo-styles/scss/themes/vaadin-overlay.scss
@@ -34,11 +34,9 @@
 
   &::part(overlay),
   &::part(content) {
-    /* Repeated as fallback for older browsers*/
-    height: calc(100vh - 40px);
-    height: calc(100dvh - 40px);
-    max-height: calc(100vh - 40px);
-    max-height: calc(100dvh - 40px);
+    /* Repeated as fallback for older browsers */
+    max-height: calc(100% - var(--cxl-marketing-nav-height));
+    max-height: calc(100dvh - var(--cxl-marketing-nav-height));
   }
 
   &::part(backdrop) {
@@ -50,42 +48,23 @@
       0 8px 24px -4px var(--lumo-shade-5pct);
   }
 
-  &::part(overlay),
-  &::part(content) {
-    height: initial;
-    max-height: initial;
-  }
-
   &::part(content) {
     padding: var(--lumo-space-s);
   }
 
+  /* It's necessary to define some properties again in a media query, because of vaadin-overlay hard coded styles at 420px*/
   @media (max-width: 568px), (max-height: 568px) {
     top: 0 !important;
-    right: 0 !important;
     bottom: var(--vaadin-overlay-viewport-bottom, 0) !important;
-    left: 0 !important;
     align-items: stretch !important;
     justify-content: flex-end !important;
 
-
     [part='overlay'] {
-      top: 0 !important;
-      right: 0 !important;
+      position: relative;
+      height: 100dvh;
+      max-height: calc(100dvh - var(--cxl-marketing-nav-height));
       bottom: var(--vaadin-overlay-viewport-bottom, 0) !important;
-      left: 0 !important;
-      align-items: stretch !important;
-      justify-content: flex-end !important;
-      width: 100vw;
-      /* Repeated as fallback for older browsers*/
-      height: calc(100vh - 40px) !important;
-      height: calc(100dvh - 40px) !important;
-      max-height: calc(100vh - 40px) !important;
-      max-height: calc(100dvh - 40px) !important;
-
-      border-top: 1px solid var(--lumo-shade-5pct);
-      border-radius: 0;
-      box-shadow: none;
+      width: 100%;
     }
 
     /* The content part scrolls instead of the overlay part, because of the gradient fade-out */
