--- a/packages/cxl-ui/scss/cxl-marketing-nav.scss
+++ b/packages/cxl-ui/scss/cxl-marketing-nav.scss
@@ -21,6 +21,7 @@
     justify-content: center;
     width: 100%;
     max-width: 100vw;
+    min-height: var(--cxl-marketing-nav-min-height, 44px);
     padding: 0 var(--lumo-space-m);
     overflow: hidden;
 
